2011-12-29  Araki Ken  <arakiken@users.sf.net>

	* x_window.c, x_window_win32.c:
	  - x_window_clear_margin_area() is called not after but before
	    win->window_exposed().
	  - x_window_clear() doesn't clear margin area in order to suppress flickering
	    of im_{candidate|status}_screen.

	* x_draw_str.c:
	  - Characters outside the right end of screen aren't drawn.

	* x_im_{status|candidate}_screen.c:
	  x_window_draw_rect_frame() is called in window_exposed(), not in draw_screen().

2011-12-28  Araki Ken  <arakiken@users.sf.net>

	* x_window.c, x_window_win32.c: window->exposed() is called after
	  x_window_clear_margin_area() when window is exposed, because
	  border of x_im_candidate_screen and x_im_status_screen is erased.

	* gtk/INSTALL: Updated.

	* gtk/vte.c:
	  - vte_terminal_paste_primary() is implemented.
	  - If vte_terminal_set_font_(string_)full is called before widget is
	    realized, dummy terminal->pvt->screen->term is set to avoid segfault.
	  - The value of WINDOW_MARGIN is changed from 2 to 1 because lxterminal-0.1.11
	    always regards the value of inner-border property as 1.

2011-12-24  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, ReleaseNote, gtk/INSTALL: Updated.

	* gtk/vte.c: Hack for supporting VtePty is implemented.

	* kik_conf_io.c: If ~/.config/mlterm exists, it is used as a
	  user config directory instead of ~/.mlterm.

	* kik_debug.c: File to output messages by --logmsg option is changed
	  from ~/.mlterm/msg[pid].log to ~/.mlterm/msg.log.

	* x_window.c, x_window_win32.c:
	  x_window_resize( larger than the size of display ) resizes window
	  to the size of display.

	* ml_vt100_parser.[ch], x_screen.c: "CSI 8;rows;cols t" and
	  "CSI 4;height;width t" sequence is supported partially.

2011-12-17  Araki Ken  <arakiken@users.sf.net>

	* 3.0.10 released.
	  (tag "rel-3_0_10")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.0.10.
