@@ -53,11 +53,14 @@ How to build & install libvte compatible library using mlterm engine.
     try XLIB_SKIP_ARGB_VISUAL variable as follows.
     $ XLIB_SKIP_ARGB_VISUAL=1 gnome-terminal
 
-  o It is recommended to specify the same font to configuration of gnome-terminal or etc
-    and ~/.mlterm/aafont so as not to load excessive fonts.
+  o It is recommended to specify the same font to configuration of gnome-terminal
+    or etc and ~/.mlterm/aafont so as not to load excessive fonts.
     ex) - gtkterm2
     ~/.gtkterm2rc    => terminalFont=Terminal 14
     ~/.mlterm/aafont => DEFAULT=Terminal 14
+
+  o Uim module of mlterm conflicts with the one of gtk+ and segmentation fault
+    is caused. (uim 1.5.7)
 
   o Unsupported vte api functions
     - vte_terminal_feed
