@@ -1,3 +1,8 @@
+2011-12-30  Araki Ken  <arakiken@users.sf.net>
+
+	* vte.c: If ConfigureNotify events are queued or not is checked in
+	  toplevel_configure() to improve performance of pseudo transparency.
+
 2011-12-29  Araki Ken  <arakiken@users.sf.net>
 
 	* x_window.c, x_window_win32.c:
